opam-version: "2.0"
maintainer: "Hannes Mehnert <hannes@mehnert.org>"
authors: ["Hannes Mehnert <hannes@mehnert.org>"]
homepage: "https://github.com/roburio/albatross"
dev-repo: "git+https://github.com/roburio/albatross.git"
bug-reports: "https://github.com/roburio/albatross/issues"
license: "ISC"

depends: [
  "ocaml" {>= "4.08.0"}
  "dune"
  "dune-configurator"
  "conf-pkg-config" {build}
  "lwt" {>= "3.0.0"}
  "ipaddr" {>= "4.0.0"}
  "cstruct"
  "logs"
  "rresult"
  "bos"
  "ptime"
  "cmdliner" {>= "1.0.0"}
  "fmt"
  "astring"
  "jsonm"
  "x509" {>= "0.11.0"}
  "tls" {>= "0.12.2"}
  "mirage-crypto-pk"
  "mirage-crypto-rng" {>= "0.8.0"}
  "asn1-combinators" {>= "0.2.0"}
  "duration"
  "decompress" {>= "0.9.0" & < "1.0.0"}
  "checkseum"
  "metrics" {>= "0.2.0"}
  "metrics-lwt" {>= "0.2.0"}
  "metrics-influx" {>= "0.2.0"}
]
build: [
  ["dune" "subst"] {pinned}
  ["dune" "build" "-p" name "-j" jobs]
]
depexts: [
  ["libnl-3-dev" "libnl-route-3-dev"] {os-family = "debian"}
  ["libnl3" "libnl3-devel"] {os-family = "centos"}
]
synopsis: "Albatross - orchestrate and manage MirageOS unikernels with Solo5"
description: """
The goal of albatross is robust deployment of [MirageOS](https://mirage.io)
unikernels using [Solo5](https://github.com/solo5/solo5). Resources managed
by albatross are network interfaces of kind `tap`, which are connected to
already existing bridges, block devices, memory, and CPU. Each unikernel is
pinned (`cpuset` / `taskset`) to a specific core.
"""