opam-version: "2.0"
maintainer: "Hannes Mehnert <hannes@mehnert.org>"
authors: ["Hannes Mehnert <hannes@mehnert.org>"]
homepage: "https://github.com/robur-coop/albatross"
dev-repo: "git+https://github.com/robur-coop/albatross.git"
bug-reports: "https://github.com/robur-coop/albatross/issues"
license: "ISC"

depends: [
  "ocaml" {>= "4.12.0"}
  "dune" {>= "2.7.0"}
  "dune-configurator"
  "conf-pkg-config" {build}
  "conf-libnl3" {os = "linux"}
  "lwt" {>= "3.0.0"}
  "ipaddr" {>= "5.3.0"}
  "logs"
  "bos" {>= "0.2.0"}
  "ptime"
  "cmdliner" {>= "1.1.0"}
  "fmt" {>= "0.8.7"}
  "x509" {>= "1.0.0"}
  "tls" {>= "1.0.0"}
  "tls-lwt" {>= "1.0.0"}
  "mirage-crypto" {>= "1.0.0"}
  "mirage-crypto-rng" {>= "1.0.0"}
  "asn1-combinators" {>= "0.3.0"}
  "duration"
  "decompress" {>= "1.3.0"}
  "bigstringaf" {>= "0.2.0"}
  "checkseum"
  "metrics" {>= "0.2.0"}
  "metrics-lwt" {>= "0.2.0"}
  "metrics-influx" {>= "0.2.0"}
  "metrics-rusage"
  "ohex" {>= "0.2.0"}
  "http-lwt-client" {>= "0.3.0"}
  "happy-eyeballs-lwt"
  "solo5-elftool" {>= "0.3"}
  "owee" {>= "0.4"}
  "fpath" {>= "0.7.3"}
  "logs-syslog" {>= "0.4.1"}
  "digestif" {>= "1.2.0"}
  "alcotest" {with-test}
]
build: [
  ["dune" "subst"] {dev}
  ["dune" "build" "-p" name "-j" jobs]
  ["dune" "runtest" "-p" name "-j" jobs] {with-test}
  ["sh" "-ex" "packaging/FreeBSD/create_package.sh"] {os = "freebsd"}
  ["sh" "-ex" "packaging/debian/create_package.sh"] {os-family = "debian" | os-family = "ubuntu"}
]
synopsis: "Albatross - orchestrate and manage MirageOS unikernels with Solo5"
description: """
The goal of albatross is robust deployment of [MirageOS](https://mirage.io)
unikernels using [Solo5](https://github.com/solo5/solo5). Resources managed
by albatross are network interfaces of kind `tap`, which are connected to
already existing bridges, block devices, memory, and CPU. Each unikernel is
pinned (`cpuset` / `taskset`) to a specific core.
"""
depexts: ["linux-headers"] {os-family = "alpine"}
