(library
  (name albatross_cli)
  (public_name albatross.cli)
  (wrapped false)
  (modules albatross_cli)
  (libraries checkseum.c albatross lwt.unix cmdliner logs.fmt logs.cli fmt fmt.cli fmt.tty ipaddr.unix metrics metrics-lwt metrics-influx metrics-rusage x509))

(library
  (name albatross_client_update)
  (wrapped false)
  (modules albatross_client_update)
  (libraries albatross albatross.cli http-lwt-client lwt))
