(library
 (name albatross_cli)
 (public_name albatross.cli)
 (wrapped false)
 (modules albatross_cli)
 (libraries checkseum.c albatross albatross.unix lwt.unix cmdliner logs.fmt
   logs.cli fmt fmt.cli fmt.tty ipaddr.unix metrics metrics-lwt metrics-influx
   ptime.clock.os metrics-rusage))

(library
 (name albatross_client_update)
 (wrapped false)
 (modules albatross_client_update)
 (libraries albatross albatross.cli http-lwt-client lwt))
