(library
 (name albatrossd_utils)
 (wrapped false)
 (modules albatrossd_utils)
 (libraries albatross albatross.unix albatross.cli ipaddr.unix lwt.unix metrics metrics-lwt metrics-influx metrics-rusage cmdliner))

(executable
 (name albatrossd)
 (public_name albatrossd)
 (package albatross)
 (modules albatrossd)
 (libraries albatross.cli albatross albatrossd_utils metrics-lwt metrics-influx))

(executable
 (name albatross_console)
 (public_name albatross-console)
 (package albatross)
 (modules albatross_console)
 (libraries albatross.cli albatrossd_utils albatross ptime.clock.os))

(executable
 (name albatross_influx)
 (public_name albatross-influx)
 (package albatross)
 (modules albatross_influx)
 (libraries albatross.cli albatrossd_utils albatross))

(executable
 (name albatross_tls_endpoint)
 (public_name albatross-tls-endpoint)
 (package albatross)
 (modules albatross_tls_endpoint)
 (libraries albatross_cli albatrossd_utils albatross.tls albatross tls-lwt))

(executable
 (name albatross_stats)
 (public_name albatross-stats)
 (package albatross)
 (modules albatross_stats)
 (libraries albatross.cli albatross.stats albatross albatrossd_utils))
