(library
 (name albatross)
 (public_name albatross)
 (instrumentation
  (backend bisect_ppx))
 (wrapped false)
 (modules vmm_core vmm_commands vmm_compress vmm_trie vmm_trie vmm_ring vmm_asn vmm_resources)
 (libraries logs ipaddr ptime duration bigstringaf decompress.de decompress.zl
   asn1-combinators fpath metrics ohex))

(library
 (name albatross_unix)
 (public_name albatross.unix)
 (wrapped false)
 (modules vmm_unix vmm_lwt vmm_vmmd)
 (libraries albatross ipaddr.unix bos solo5-elftool lwt lwt.unix ptime.clock.os
   digestif))
