(library
 (name albatross_stats)
 (public_name albatross.stats)
 (libraries albatross albatross.unix)
 (wrapped false)
 (foreign_stubs
  (language c)
  (names albatross_stats_stubs)
  (flags
   (:standard)
   (:include c_flags.sexp)))
 (c_library_flags
  (:include c_library_flags.sexp)))

(rule
 (targets c_flags.sexp c_library_flags.sexp)
 (action
  (run ./config/discover.exe)))
