(library
 (name albatross_tls)
 (public_name albatross.tls)
 (wrapped false)
 (modules vmm_tls vmm_tls_lwt)
 (libraries albatross tls tls-lwt x509))

(library
 (name albatross_tls_cli)
 (wrapped false)
 (modules albatross_tls_common)
 (libraries albatross_cli albatross.tls))

(executable
 (name albatross_tls_endpoint)
 (public_name albatross-tls-endpoint)
 (package albatross)
 (modules albatross_tls_endpoint)
 (libraries albatross_cli albatross_tls_cli albatross))
